--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack serve --mode development --open --config webpack.config.js",
+    "build": "webpack --mode production --config webpack.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -50,6 +49,7 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
-    "babel-loader": "^9.1.3"
+    "babel-loader": "^9.1.3",
+    "webpack-dev-server": "^4.15.1"
   }
 }
