--- a/package.json
+++ b/package.json
@@ -2,24 +2,20 @@
   "name": "simon",
   "version": "0.1.0",
   "private": true,
-  "main": "dist/index.jsx",
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "babel": "^6.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "react-router": "^6.17.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "webpack serve --mode development --open --config webpack.config.js",
-    "build": "webpack --mode production --config webpack.config.js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,18 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "description": "",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-react": "^7.22.15",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.8.1",
-    "style-loader": "^3.3.3",
-    "webpack-dev-server": "^4.15.1"
   }
 }
