--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/backup
+node_modules/
+backup/
 /.pnp
 .pnp.js
 
@@ -13,6 +13,7 @@
 /build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
